<resources>
    <string name="common_app_name">ClassSwift Service</string>
    <string name="eng_debug_user_id">user_debug</string>
    <string name="eng_debug_tool_title">Debug Tool</string>
    <string name="eng_debug_tool_socket_description">Connect/Disconnect Socket</string>
    <string name="eng_debug_tool_maintenance_json_file_description">The json file used for maintenance announcement.</string>
    <string name="eng_debug_tool_maintenance_json_file_from_server">From Server</string>
    <string name="eng_debug_tool_maintenance_json_file_from_test">From Test</string>
    <string name="common_empty_content">-</string>
    <string name="common_temp_view">Temp View</string>
    <string name="common_loading">Loading...</string>
    <string name="common_end_app">End App</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_deny">Deny</string>
    <string name="common_allow">Allow</string>
    <string name="common_retry">Retry</string>
    <string name="common_group">Groups</string>
    <string name="common_ok">OK</string>
    <string name="common_error_general">That\'s an error. Please try again.</string>
    <string name="common_save">Save</string>
    <string name="common_submit">Submit</string>
    <string name="common_connect">Connect</string>
    <string name="common_disconnect">Disconnect</string>
    <string name="common_try_to_refresh_page">Try to refresh this page again</string>
    <string name="common_upgrade">Upgrade</string>
    <string name="common_soon">Soon</string>
    <string name="common_buzzer">Buzzer</string>
    <string name="common_timer">Timer</string>
    <string name="common_clear">Clear</string>
    <string name="common_all">All</string>
    <string name="common_link">Link</string>
    <string name="common_version">Version</string>
    <string name="common_end_in_session">End in Session</string>
    <string name="common_got_it">Got it</string>
    <string name="common_understand">Understand</string>
    <string name="common_quit">Quit</string>
    <string name="common_quit_app">Quit app</string>
    <string name="common_remove">Remove</string>
    <string name="common_guest">Guest</string>
    <string name="common_empty_seat_number">-</string>
    <string name="common_sign_out">Sign Out</string>
    <string name="common_select">Select</string>
    <string name="common_confirm">Confirm</string>
    <string name="common_notice">Notice</string>
    <string name="common_sign_out_notice">Sign out Notice</string>
    <string name="common_edit">Edit</string>
    <string name="common_delete">Delete</string>
    <string name="common_select_again">Select Again</string>
    <string name="common_upload_again">Upload Again</string>
    <string name="common_start_quiz">Start question</string>
    <string name="common_question">Question</string>
    <string name="mvb_sketch_response_pagination_current_page">1</string>
    <string name="common_cancel_question">Cancel question</string>
    <string name="common_capture_again">Capture again</string>
    <string name="common_upload_failed">Failed to Upload</string>
    <string name="common_failed">Failed</string>
    <string name="common_reload">Reload</string>
    <string name="common_correct">Correct</string>
    <string name="common_no_answer">No Answer</string>
    <string name="common_participants">participants</string>
    <string name="common_incorrect">Incorrect</string>
    <string name="common_absent">Absent</string>
    <string name="common_close_quiz">Close Question</string>
    <string name="common_close">Close</string>
    <string name="common_screenshot_hint">Drag and select the area to create a question</string>
    <string name="common_screenshot_drag_hint">Drag and capture the area to create question</string>
    <string name="common_connection_lost_msg">No internet connection. Please check your internet and try again.</string>
    <string name="common_done">Done</string>
    <string name="common_stopwatch">Stopwatch</string>
    <string name="common_start">Start</string>
    <string name="common_stop">Stop</string>
    <string name="common_try_again">Try again</string>
    <string name="common_continue">continue</string>
    <string name="common_no_current_participants">No Current Participants</string>
    <string name="common_no_internet_connecting">No internet. Reconnecting...</string>
    <string name="common_or">OR</string>
    <string name="common_please_try_again">Please try again.</string>
    <string name="common_upgrade_your_plan_title">Upgrade Your Plan</string>
    <string name="common_upgrade_for_leaderboard">Upgrade now to unlock the full Leaderboard experience.</string>
    <string name="common_status_absent">Absent</string>
    <string name="common_url">Link</string>
    <string name="common_language">Language</string>
    <string name="common_select_all">All</string>
    <string name="common_records">Records</string>
    <string name="common_upgrade_hint">Upgrade the plan to access the following features.</string>
    <string name="common_add">Add</string>
    <string name="common_subtract">Subtract</string>
    <string name="common_english">English</string>
    <string name="common_chinese">繁體中文</string>
    <string name="common_create">Create</string>
    <string name="common_network_disconnect_message">Please check your internet connection and try again.</string>
    <string name="overlay_permission_title">Display over other apps?</string>
    <string name="overlay_permission_message">Allow ClassSwift to display on top of other apps you’re using. This app will be able to see where you tap on the screen.</string>
    <string name="overlay_permission_go_setting">Go setting.</string>
    <string name="overlay_permission_deny_message">Permission required to continue. Please enable the necessary permissions in System Settings and try again.</string>
    <string name="error_msg_general">Something went wrong</string>
    <string name="error_msg_general_try_again">Something went wrong, please try again.</string>
    <string name="splashscreen_login_with_browser">Log in with browser</string>
    <string name="splashscreen_no_account">No account?</string>
    <string name="splashscreen_create_one">Create one</string>
    <string name="splashscreen_complete_login">Go to the browser to complete login</string>
    <string name="splashscreen_open_browser_again">Open browser tab again</string>
    <string name="dialog_save_login_title">Save Login Information</string>
    <string name="dialog_save_login_message">Do you want to save your login information?</string>
    <string name="dialog_refresh_page_btn">Refresh Page</string>
    <string name="eng_time_format">%1$02d:%2$02d:%3$02d</string>
    <string name="region_not_supported_title">Region Not Supported</string>
    <string name="region_not_supported_message">This app is currently unavailable in your region. Please contact your sales representative for assistance.</string>
    <string name="userinfo_title">Almost there...</string>
    <string name="userinfo_sub_title">We’d love to know a little more about you. Fill this out and you’re all set to dive in!</string>
    <string name="userinfo_terms_update_title">Terms and Conditions Update</string>
    <string name="userinfo_terms_update_sub_title">We’ve recently updated our terms and conditions on the below policies. To continue using ClassSwift, please review and accept these changes. Your privacy and data security are important to us, and these updates aim to enhance your experience.</string>
    <string name="userinfo_success_title">You are ready to go!</string>
    <string name="userinfo_success_subtitle">Thank you for your submission.</string>
    <string name="userinfo_display_name">Display name</string>
    <string name="userinfo_country">Country/Territory</string>
    <string name="userinfo_state">State</string>
    <string name="userinfo_school">School/Organization</string>
    <string name="userinfo_my_role">My role is</string>
    <string name="userinfo_eula_message" formatted="false">I agree to the ClassSwift %s and %s . We process your personal data in accordance with our %s.</string>
    <string name="userinfo_eula_string">EULA</string>
    <string name="userinfo_service_string">Terms of Service</string>
    <string name="userinfo_privacy_string">Privacy Policy</string>
    <string name="userinfo_ai_message">I consent to participating in the ClassSwift AI Beta Program, agreeing to provide feedback aimed at improving product features and functionalities.</string>
    <string name="userinfo_privacy_message">I want to receive the latest ClassSwift news and promotions. I agree to the evaluation of the newsletter usage with the aim of newsletter improvement. I am aware that I can withdraw my consent at any time. We use your data exclusively in accordance with our %s.</string>
    <string name="toolbar_menu_student_management">Student List</string>
    <string name="toolbar_menu_join_class">Join Class</string>
    <string name="toolbar_menu_interaction_spinner">Spinner</string>
    <string name="toolbar_menu_settings">Settings</string>
    <string name="toolbar_menu_interaction_random_draw">Random Draw</string>
    <string name="leaderboard_title">Leaderboard</string>
    <string name="quiz_types_true_false">True/False</string>
    <string name="quiz_types_multiple_selection">Multiple Selection</string>
    <string name="quiz_types_poll">Poll</string>
    <string name="quiz_types_short_answer">Short Answer</string>
    <string name="quiz_types_sketch_response">Sketch response</string>
    <string name="quiz_types_audio">Audio</string>
    <string name="quiz_types_quiz_generator">Quiz Generator</string>
    <string name="preset_quiz_title">Preset Quiz</string>
    <string name="toolbar_menu_settings_quit_app">Quit ClassSwift</string>
    <string name="toolbar_leave_class">Leave Class</string>
    <string name="toolbar_start_lesson">Start Lesson</string>
    <string name="dialog_end_lesson_title">End Lesson</string>
    <string name="push_and_respond_title">Sketch Response</string>
    <string name="instant_push_title">Instant Push</string>
    <string name="dialog_buttons_end_in_session">Lesson in Session</string>
    <string name="quiz_collection_preset_lesson_not_started">Lesson not started</string>
    <string name="dialog_buttons_end_lesson">End lesson and return</string>
    <string name="dialog_end_lesson_with_return">Are you sure you want to end the lesson and return to Class List?</string>
    <string name="dialog_end_lesson_with_logout">Are you sure you want to end the lesson and log out?</string>
    <string name="dialog_buttons_end_lesson_logout">End lesson and log out</string>
    <string name="dialog_end_lesson_with_quit">Are you sure you want to end the lesson and quit ClassSwift?</string>
    <string name="dialog_buttons_end_lesson_quit">End lesson and quit</string>
    <string name="toolbar_tools">Tool</string>
    <string name="toolbar_settings">Settings</string>
    <string name="settings_tutorial_watch">Watch</string>
    <string name="tutorial_actions_skip">Skip</string>
    <string name="tutorial_actions_get_started">Get Started</string>
    <string name="tutorial_skip_dialog_skip_for_now">Skip for Now</string>
    <string name="tutorial_skip_dialog_keep_going">Keep Going</string>
    <string name="tutorial_actions_watch_again">Watch Again</string>
    <string name="tutorial_actions_ready">I\'m Ready!</string>
    <string name="tutorial_actions_back">Back</string>
    <string name="tutorial_actions_next">Next</string>
    <string name="tutorial_hint_url" translatable="false">%s/helpcenter/33000218099</string>
    <string name="quiz_info_correct_answer">Correct Answer</string>
    <string name="mvb_qc_error_state_title">Failed to find quiz collection</string>
    <string name="mvb_qc_error_state_message">Try to refresh this page again</string>
    <string name="mvb_qc_btn_refresh">Refresh</string>
</resources>