<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="346.66dp"
        android:layout_height="336dp"
        android:background="@drawable/bg_neural0_radius800_line_neutral450_border400"
        android:paddingStart="10.66dp"
        android:paddingTop="10.66dp"
        android:paddingEnd="10.66dp"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- 關閉按鈕 -->
        <ImageButton
            android:id="@+id/button_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_close_64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- 標題 -->
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_timer"
            android:textColor="@color/window_select_org_textview"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/cl_timepicker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_close" />
        <!-- 時間顯示 -->
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="135.33dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/neutral_900"
            android:textSize="40sp"
            android:visibility="invisible"
            android:letterSpacing="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="11:11" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_timepicker"
            android:layout_width="wrap_content"
            android:layout_height="135.33dp"
            android:layout_marginTop="10dp"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <com.viewsonic.classswift.ui.widget.CSTimerNumberPicker
                android:id="@+id/cstnp_minute_tens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:isBase6="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cstnp_minute_units"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.viewsonic.classswift.ui.widget.CSTimerNumberPicker
                android:id="@+id/cstnp_minute_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_colon"
                app:layout_constraintStart_toEndOf="@id/cstnp_minute_tens"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_colon"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=":"
                android:textColor="@color/neutral_900"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_colon"
                app:layout_constraintStart_toEndOf="@id/cstnp_minute_units"
                app:layout_constraintTop_toTopOf="parent" />

            <com.viewsonic.classswift.ui.widget.CSTimerNumberPicker
                android:id="@+id/cstnp_second_tens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:isBase6="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cstnp_second_units"
                app:layout_constraintStart_toEndOf="@id/tv_colon"
                app:layout_constraintTop_toTopOf="parent" />

            <com.viewsonic.classswift.ui.widget.CSTimerNumberPicker
                android:id="@+id/cstnp_second_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cstnp_second_tens"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RadioGroup
            android:id="@+id/rg_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/button_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_timepicker">

            <RadioButton
                android:id="@+id/rb_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/bg_tools_timer_radiobutton"
                android:checked="true"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/common_timer"
                android:textColor="@color/selector_tools_timer_radio_button_text" />

            <RadioButton
                android:id="@+id/rb_stopwatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:button="@drawable/bg_tools_timer_radiobutton"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/common_stopwatch"
                android:textColor="@color/selector_tools_timer_radio_button_text" />

        </RadioGroup>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_start"
            android:layout_width="293.33dp"
            android:layout_height="36.33dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_tools_timer_button"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/common_start"
            android:textAllCaps="false"
            android:textColor="@color/neutral_0"
            android:textSize="14sp"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_option" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_try_again"
            android:layout_width="138.66dp"
            android:layout_height="36.33dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_tools_timer_button"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/common_try_again"
            android:textAllCaps="false"
            android:textColor="@color/neutral_0"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_continue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_option" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_continue"
            android:layout_width="138.66dp"
            android:layout_height="36.33dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_tools_timer_button"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/common_continue"
            android:textAllCaps="false"
            android:textColor="@color/neutral_0"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/button_try_again"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_option" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>